# executive-mind-matrix

./: .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  COMMAND_REFERENCE.md  COMPLETE_FEATURE_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DASHBOARD_API_GUIDE.md  DATABASE_PROPERTY_MAP.md  DEPLOYMENT_CHECKLIST_P3.1.1.md  DEPLOYMENT_FILES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFRASTRUCTURE_SUMMARY.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_READINESS_CHECKLIST.md  Dockerfile  Dockerfile.production  Dockerfile.railway  ENHANCEMENTS_SUMMARY.md  Executive_Brain_Exact_Setup_Guide.md  Executive_Brain_Integration_Architecture.md  Executive_Brain_Setup_Guide_REVISED.md  FINE_TUNING_PIPELINE_DESIGN.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPLEMENTATION_P3.1.1_AUTO_DIALECTIC.md  IMPLEMENTATION_SUMMARY.md  MONITORING_SETUP.md  NOTION_DASHBOARD_SETUP.md  NOTION_PROPERTIES_GUIDE.md  NOTION_PROPERTY_SETUP.md  P3.1.3_COMPLETE.md  P3.1.3_IMPLEMENTATION_SUMMARY.md  P3.1.3_QUICK_REFERENCE.md  PARALLEL_EXECUTION_SUMMARY.md  PHASE1_ACTION_ID_DECISION.md  PRE_DEPLOYMENT_VALIDATION_SUMMARY.md  PRODUCTION_READINESS.md  (+29 more)
.claude/: PROGRESS.md  constraints.md  session-start-checklist.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-railway.yml  lint.yml  security.yml  test.yml  type-check.yml
app/: agent_router.py  areas_manager.py  command_center.py  command_center_final.py  daily_digest.py  diff_logger.py  knowledge_linker.py  models.py  models.sync-conflict-20260224-143627-GNRFZGR.py  monitoring.py  notion_poller.py  performance_dashboard.py  property_validator.py  scheduler.py  security.py  smart_router.py  task_spawner.py  training_analytics.py  webhook_receivers.py  workflow_integration.py  workflow_integration.sync-conflict-20260224-143602-GNRFZGR.py
app/fine_tuning/: __init__.py  data_export.py  pattern_analysis.py
config/: alerting_rules.yml  alerts.yaml  prometheus.yml  settings.py
config/grafana/dashboards/: dashboard.yml
docs/: ARCHITECTURE.md  AUTO_DIALECTIC_GUIDE.md  DEPLOYMENT-GUIDE.md  DOCUMENTATION_SUMMARY.md  P3.1.2_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README-EXECUTIVE.md  README.md  USER-GUIDE.md  WEBHOOK_QUICK_REFERENCE.md  WEBHOOK_SETUP.md  WEBHOOK_TEST_EXAMPLES.sh
nw_wrld_data/json/: appState.json  recordingData.json  userData.json
scripts/: audit_database_properties.py  pre-deploy-check.sh  smoke-test.py  test-connections.py  validate-env.py
tests/: QUICK_REFERENCE.md  README.md  __init__.py  conftest.py  test_agent_router.py  test_agent_router.sync-conflict-20260224-143628-GNRFZGR.py  test_api.py  test_areas_manager.py  test_auto_dialectic.py  test_command_center.py  test_command_center_refresh.py  test_diff_logger.py  test_e2e_workflows.py  test_integration.py  test_models.py  test_notion_poller.py  test_settings.py  test_workflow_integration.py
